# nrk-nynorsk

./: .dockerignore  .gitignore  .mypy.ini  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  docker-swarm.yml  manage.py  pyproject.toml
.github/workflows/: main.yml
.github/workflows/matchers/: isort.json
ansible/: deploy.yml  duck.sh  nrk_nynorsk  nrk_nynorsk.service
nrk_nynorsk/: admin.py  apps.py  asgi.py  models.py  rss.py  sentry.py  settings.py  urls.py  views.py  wsgi.py
nrk_nynorsk/management/commands/: rss.py
nrk_nynorsk/migrations/: 0001_initial.py  0002_auto_20200720_1929.py  0003_rssfeed.py  0004_auto_20200801_1349.py  0005_auto_20200802_0629.py  0006_auto_20201219_1641.py
nrk_nynorsk/templates/nrk_nynorsk/: article_list.html
nrk_nynorsk_scraper/: scrapy.cfg
nrk_nynorsk_scraper/nrk_nynorsk_scraper/: items.py  middlewares.py  pipelines.py  settings.py
nrk_nynorsk_scraper/nrk_nynorsk_scraper/spiders/: nrk.py
