[tool.poetry]
name = "nrk-nynorsk"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1rc1"
scrapy = "^2.2.1"
scrapy-djangoitem = "^1.1.1"
django-extensions = "^3.0.3"
Werkzeug = "^1.0.1"
psycopg2-binary = "^2.8.5"
gunicorn = "^20.0.4"
django-debug-toolbar = "^2.2"
whitenoise = "^5.1.0"
python-dotenv = "^0.14.0"
requests = "^2.24.0"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
